hello-world/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  ports:
    - port: 80
      targetPort: 3030
      name: http
  selector:
    app: hello-world
