hello-world/base/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
    - hello-world.localhost
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: hello-world
